Fix bug of inconsistent button title for tabs count in toolbar and tab-grid

Add a helper function that returns text for tabs count:
(-inf, 0]   => ""
(0, 100)    => "num"
[100, +inf) => ":)"

Bug: 835801
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: Ica4607b10dbd1f241d4e5a07c32128a1f4607db8
Reviewed-on: https://chromium-review.googlesource.com/1172297
Reviewed-by: Mark Cogan <marq@chromium.org>
Commit-Queue: Yi Su <mrsuyi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#582552}
Former-commit-id: e5743ef0e3b3ff32a8318eee85b1dd67e7867c46