ios/chrome/browser/ui/uikit_ui_util.h
@@ -236,4 +236,9 @@ void TriggerHapticFeedbackForNotification(UINotificationFeedbackType type);
 // Returns the safeAreaInsets for a given view.
 UIEdgeInsets SafeAreaInsetsForView(UIView* view);
 
+// Returns the text for tabs count to be displayed in toolbar and tab_grid.
+// As an easter egg, show a smiley face instead of the count if the user has
+// more than 99 tabs open.
+NSString* TextForTabCount(long count);
+
 #endif  // IOS_CHROME_BROWSER_UI_UIKIT_UI_UTIL_H_
